Initial refactoring and implementation of a subset of JAX-RS specification for REST API #http-122